--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <th class="bookAuthor">Author</th>
           <th class="bookPages">Number of Pages</th>
           <th class="haveRead">Have you read?</th>
-          <th class="removeButton"> </th>
+          <th class="tableRemove"> </th>
         </div>
       </tr>
     </table>
